added more text

--- a/gh900webapp/Pages/Index.cshtml
+++ b/gh900webapp/Pages/Index.cshtml
@@ -6,6 +6,9 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to my GH-900 Class day 2</h1>
+    this is some updated text
+    and adding some more...
+
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
