update learn links with more details

--- a/gh900webapp/Pages/Index.cshtml
+++ b/gh900webapp/Pages/Index.cshtml
@@ -6,9 +6,9 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to my GH-900 Class day 2</h1>
-    made more updates
 
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    <p>Learn about <a href="https://learn.microsoft.com">using Github stuff over here </a>.</p>
 </div>
 
 
